# fm-playground

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: example.yaml
data/examples/: my_qa_dev.jsonl
docker/: Dockerfile.cpu  Dockerfile.cuda
src/fm_playground/: __init__.py  cli.py
src/fm_playground/metrics/: __init__.py  exact_match.py
src/fm_playground/tasks/: __init__.py  qa_em.py  registry.py
src/myeval/: __init__.py  cli.py  schemas.py  utils.py
src/myeval/backends/: __init__.py  lighteval_runner.py
src/myeval/datasets/: __init__.py  base.py
tests/: test_loader.py  test_task.py
